[FIX][UI][ENH] Base CSS: Make links in highlighted adminoptions visible with nice contrast

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -690,6 +690,9 @@ code, pre.codelisting {
   .adminoptionboxchild legend {
     font-size: 1.35rem; }
 
+div.highlight.adminoptionbox a {
+  color: #fff !important; }
+
 input[type="checkbox"].preffilter-toggle-round + label {
   background-color: #dee2e6; }
 
